--- a/XYZ-Forge-API/.env.example
+++ b/XYZ-Forge-API/.env.example
@@ -1,1 +1,3 @@
 JWT_SECRET_KEY = "YOUR_BEAUTIFUL_SECRET_KEY"
+MONGODB_CONNECTION_STRING="YOUR_BEAUTIFUL_CONNECTION_STRING"
+MONGODB_DATABASE_NAME="YOUR_BEAUTIFUL_DATABASE_NAME"
