Fixed docker deployment

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build-env
 WORKDIR /app 
 
-COPY . ./
+COPY . .
 WORKDIR /app/XYZ-Forge-API
 
 RUN dotnet publish -c Release -o out
